set overflow hidden to fix contact mobile view minor overflow

--- a/css/style.css
+++ b/css/style.css
@@ -622,6 +622,7 @@ footer .right-container p {
     .contact .container {
         flex-direction: column;
         padding: unset;
+        overflow: hidden;
     }
 
     .contact .left-container {
